fix: styling issue of skill builder page on firefox

--- a/src/components/skills-quiz/styles/TopSkillsOverview.scss
+++ b/src/components/skills-quiz/styles/TopSkillsOverview.scss
@@ -34,14 +34,14 @@
 }
 
 .similar-jobs-section {
- padding-left: 10px;
+  padding-left: 10px;
 }
 
 .skill-badge {
   padding: 3px;
   margin-right: 14px;
   margin-bottom: 0px;
-  margin-top: 1px;
+  margin-top: 5px;
   font-weight: 500;
   display: inline;
 }
